syntax = "proto3";
option csharp_namespace = "BlazorBoilerplate.Server";

enum DataType {
    DATATYPE_UNKNOW = 0;
    DATATYPE_STRING = 1;
    DATATYPE_INT = 2;
    DATATYPE_FLOAT = 3;
    DATATYPE_CATEGORY = 4;
    DATATYPE_BOOLEAN = 5;
    DATATYPE_DATETIME = 6;
    DATATYPE_IGNORE = 7;
  }
  