syntax = "proto3";
option csharp_namespace = "BlazorBoilerplate.Server";

import "Enumerations.proto";


message DeleteModelRequest {
  string userId = 1;
  string modelId = 2;
}

message DeleteModelResponse {
  
}

message GetModelsRequest {
  string userId = 1;
  string datasetId = 2;
}

message GetModelsResponse {
  repeated Model models = 1;
}

message GetModelRequest {
  string userId = 1;
  string modelId = 2;
}

message GetModelResponse {
  Model model = 1;
}

message Model {
  string id = 1;
  string trainingId = 2;
  float testScore = 3;
  int32 runtime = 4;
  string mlModelType = 5;
  string mlLibrary = 6;
  string status = 7;
  repeated string statusMessages = 8;
  float predictionTime = 9;
  string automl = 10;
  string datasetId = 11;
  string explanation = 12;
}

message ModelPredictRequest {
  string userId = 1;
  string predictionId = 2;
  string modelId = 3;
}

message ModelPredictResponse {
  string modelPredictionId = 1;
}

